Fix homepage horizontal scrollbar in promo section (#693)
* Fix homepage horizontal scrollbar in promo section

Refs #624

* Fix negative margin to match parent padding

---------

--- a/bakerydemo/static/css/main.css
+++ b/bakerydemo/static/css/main.css
@@ -1476,7 +1476,7 @@ input[type='radio'] {
 @media (min-width: 768px) {
   .homepage .promo-row {
     padding-top: 80px;
-    margin-right: -45px;
+    margin-right: -40px;
   }
 }
 
